# exclamation_language

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  greatness.exclaport  init.cmd  locales.cc  make-c-package.bat  targets.cpp  test.excla
Lib/: umbrella.py
Lib/cli/BetterCli/Working/: working_directory_client_init.cpp  working_directory_client_init.h
Scripts/: CMakeLists.txt
Scripts/excla/scripts/src/: excla_headers.cpp  excla_language.cpp  parser.cpp  strings.h
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  dip.ilk  excla.ilk  exclamation_language.cbp  exclang.ilk  exclapar.ilk  exclatr.ilk  ldip.ilk
functions/md/: Positions.md  basic-stdin.md  cache.md  defining.md  definitions-and-includes.md  executables-and-exclaports.md  for-loops.md  get-started.md  including-and-preincluding.md  io-warn-print.md  print_raw.md  templates.md
launch/Launcher/: CMakeLists.txt  ex_command_init.cpp
launch/la/launch/LauncherData/LauncherComponents/: executeCommand.h
properties/props/functions/src/src_functions/ext/org/general/: properties.hpp
tests/: autopile.excla  build.excla  get.excla  remake.excla  sep.excla  test.excla
visualcbuilds/: CMakeCache.txt  Makefile  cmake_install.cmake  exclamation_language.cbp
